--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mineflayer-blockfinder": "0.0.7",
     "mineflayer-pathfinder": "^1.7.0",
     "mineflayer-web-inventory": "^1.6.3"
+  },
+  "devDependencies": {
+    "minecraft-protocol": "^1.26.5"
   }
 }
